--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/antd": "^1.0.0",
     "@types/jest": "^26.0.15",
+    "@types/less": "^3.0.2",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -16,6 +17,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.11.2",
+    "less": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
