--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/redux-thunk": "^2.1.0",
     "antd": "^4.11.2",
+    "install": "^0.13.0",
     "less": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -50,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.0.1",
+    "less-loader": "^7.3.0",
+    "style-loader": "^2.0.0"
   }
 }
