--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^4.11.2",
     "install": "^0.13.0",
     "less": "^4.1.0",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
