--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/uuid": "^8.3.0",
     "antd": "^4.11.2",
+    "axios": "^0.21.1",
     "install": "^0.13.0",
     "less": "^4.1.0",
     "node-sass": "4.14.1",
