--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "loadcalculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://omgpiu.github.io/loadcalculator",
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@reduxjs/toolkit": "^1.5.0",
@@ -20,6 +21,7 @@
     "@types/uuid": "^8.3.0",
     "antd": "^4.11.2",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "install": "^0.13.0",
     "less": "^4.1.0",
     "node-sass": "4.14.1",
@@ -35,6 +37,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
