--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://omgpiu.github.io/loadcalculator",
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@reduxjs/toolkit": "^1.5.0",
@@ -31,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
     "typescript": "^4.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
@@ -41,7 +40,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -67,3 +67,4 @@
     "style-loader": "^2.0.0"
   }
 }
+
